--- a/pipeline.yml
+++ b/pipeline.yml
@@ -11,7 +11,7 @@ resources:
     host: 192.168.0.2
     port: 6379
     key: numbers
-- name: numbers
+- name: primes
   type: redis
   source:
     host: 192.168.0.2
@@ -21,6 +21,7 @@ resources:
   type: time
   source: {interval: 10s}
 - name: scripts
+  type: git
   uri: https://github.com/benmoss/redis-resource.git
   branch: master
 
@@ -65,10 +66,10 @@ jobs:
         inputs: [name: numbers]
         outputs: [name: output]
         run:
-          path: /bin/sh
-    - put: numbers
+          path: scripts/scripts/is_prime.rb
+    - put: primes
       params:
-        file: scripts/scripts/is_prime.rb
+        file: output/stuff
 
 - name: put-a-zero
   plan:
